# fancontrol

./: README.md  pyproject.toml
fancontrol/: __init__.py  control.py  decorators.py
